--- a/src/views/user/user-profile.ejs
+++ b/src/views/user/user-profile.ejs
@@ -78,9 +78,11 @@
                                 <ul>
                                     <li class="active"><a>Thông tin</a></li>
                                     <li><a href="/user/writer-favorite/<%- userProfile.profile.username %>-<%- userProfile._id %>">Người viết yêu thích</a></li>
-                                    <li><a href="/user/my-review/<%- userProfile.profile.username %>-<%- userProfile._id %>">Bài viết của bạn</a></li>
-                                    <li><a href="/user/my-blog/<%- userProfile.profile.username %>-<%- userProfile._id %>">Blog của bạn</a></li>
-                                    <li><a href="/user-cms/dashboard">Quản lý bài viết</a></li>
+                                    <li><a href="/user/my-review/<%- userProfile.profile.username %>-<%- userProfile._id %>">Bài viết</a></li>
+                                    <li><a href="/user/my-blog/<%- userProfile.profile.username %>-<%- userProfile._id %>">Blog</a></li>
+                                    <% if (isAuth){ %>
+                                        <li><a href="/user-cms/dashboard">Quản lý bài viết</a></li>
+                                    <% } %>
                                 </ul>
                             </div>
                             <% if (isAuth){ %>
