--- a/src/views/user/user-my-review.ejs
+++ b/src/views/user/user-my-review.ejs
@@ -75,9 +75,11 @@
                                 <ul>
                                     <li><a href="/user/profile/<%- userProfile.profile.username %>-<%- userProfile._id %>">Thông tin</a></li>
                                     <li><a href="/user/writer-favorite/<%- userProfile.profile.username %>-<%- userProfile._id %>">Người viết yêu thích</a></li>
-                                    <li class="active"><a>Bài viết của bạn</a></li>
-                                    <li><a href="/user/my-blog/<%- userProfile.profile.username %>-<%- userProfile._id %>">Blog của bạn</a></li>
-                                    <li><a href="/user-cms/dashboard">Quản lý bài viết</a></li>
+                                    <li class="active"><a>Bài viết</a></li>
+                                    <li><a href="/user/my-blog/<%- userProfile.profile.username %>-<%- userProfile._id %>">Blog</a></li>
+                                    <% if (isAuth){ %>
+                                        <li><a href="/user-cms/dashboard">Quản lý bài viết</a></li>
+                                    <% } %>
                                 </ul>
                             </div>
                             <% if (isAuth) { %>
