--- a/src/views/user/layouts/footer.ejs
+++ b/src/views/user/layouts/footer.ejs
@@ -4,54 +4,48 @@
 		<div class="flex-parent-ft">
 			<div class="flex-child-ft item1">
 				 <a href="index.html"><img class="logo" src="/user/images/logo2.png" width="125" height="58" alt=""></a>
-				 <!-- <p>5th Avenue st, manhattan<br>
-				New York, NY 10001</p>
-				<p>Call us: <a href="#">(+01) 202 342 6789</a></p> -->
+				 <p>Khuông Việt<br>
+				Tân Phú, Hồ Chí Minh</p>
+				<p>Liên hệ: <a href="tel:0388037094">(+84) 388 037 094</a></p>
 			</div>
 			<div class="flex-child-ft item2">
-				<h4>Resources</h4>
+				<h4>Trang</h4>
 				<ul>
-					<li><a href="#">About</a></li> 
-					<li><a href="#">Blockbuster</a></li>
-					<li><a href="#">Contact Us</a></li>
-					<li><a href="#">Forums</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Help Center</a></li>
+					<li><a href="/">Trang chủ</a></li> 
+					<li><a href="/book/category">Thể loại</a></li>
+					<li><a href="/writer">Người đóng góp</a></li>
+					<li><a href="/blog">Blog</a></li>
 				</ul>
 			</div>
 			<div class="flex-child-ft item3">
-				<h4>Legal</h4>
+				<h4>Pháp lý</h4>
 				<ul>
-					<li><a href="#">Terms of Use</a></li> 
-					<li><a href="#">Privacy Policy</a></li>	
-					<li><a href="#">Security</a></li>
+					<li><a href="#">Điều khoản sử dụng</a></li> 
+					<li><a href="#">Chính sách bảo mật</a></li>	
 				</ul>
 			</div>
 			<div class="flex-child-ft item4">
-				<h4>Account</h4>
+				<h4>Khác</h4>
 				<ul>
-					<li><a href="#">My Account</a></li> 
-					<li><a href="#">Watchlist</a></li>	
-					<li><a href="#">Collections</a></li>
-					<li><a href="#">User Guide</a></li>
+					<li><a href="#">Trợ giúp</a></li> 
 				</ul>
 			</div>
 			<div class="flex-child-ft item5">
-				<h4>Newsletter</h4>
-				<p>Subscribe to our newsletter system now <br> to get latest news from us.</p>
+				<h4>Bản tin</h4>
+				<p>Đăng kí gửi bản tin ngay bây giờ <br> Để nhận được thông báo mới nhất từ chúng tôi.</p>
 				<form action="#">
-					<input type="text" placeholder="Enter your email...">
+					<input type="text" placeholder="Nhập email của bạn">
 				</form>
-				<a href="#" class="btn">Subscribe now <i class="ion-ios-arrow-forward"></i></a>
+				<a href="#" class="btn">Đăng kí ngay <i class="ion-ios-arrow-forward"></i></a>
 			</div>
 		</div>
 	</div>
 	<div class="ft-copyright">
 		<div class="ft-left">
-			<!-- <p>© 2017 Blockbuster. All Rights Reserved. Designed by leehari.</p> -->
+			<p>© 2021 Review sách. Được làm bởi Lê Đức Tùng.</p>
 		</div>
 		<div class="backtotop">
-			<p><a href="#" id="back-to-top">Back to top  <i class="ion-ios-arrow-thin-up"></i></a></p>
+			<p><a href="#" id="back-to-top">Lên trang đầu  <i class="ion-ios-arrow-thin-up"></i></a></p>
 		</div>
 	</div>
 </footer>
