--- a/src/views/admin/layouts/javascript.ejs
+++ b/src/views/admin/layouts/javascript.ejs
@@ -33,10 +33,10 @@ Bootstrap Date Range Picker
 ================================================ -->
 <script src="/admin/js/date-range-picker/daterangepicker.js"></script>
 
+<script src="/admin/js/custom-jquery.js"></script>
+
 <script>
 	$(document).ready(function () {
-
-		
 
         $('.btn-search').click((e) => {
 			$('#panel-search').toggle();
