--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -12,7 +12,7 @@
   <%- include('layouts/head') %>
 
   <!-- ========== Css Files ========== -->
-  <link href="css/root.css" rel="stylesheet">
+  <link href="/admin/css/root.css" rel="stylesheet">
   <%- include('layouts/head') %>
 
 </head>
