--- a/src/views/admin/layouts/pagination.ejs
+++ b/src/views/admin/layouts/pagination.ejs
@@ -5,7 +5,7 @@
         
         <% for( let i = 1; i <= 4; i++ ) { %>
             <option 
-                value="<%- pageLink+(typeof isParam !== 'undefined'? '&': '?')+'page=1&limit='+(i*5) %>"
+                value="<%- pageLink+'page=1&limit='+(i*5) %>"
                 <%- data.limit ===  i*5 && 'selected'%> 
             >  
                 <%- i*5 %> <%- limitTitle %>
@@ -22,7 +22,7 @@
         <% if (data.page === 1) { %>
             <a><i class="fa fa-caret-left"></i></a>
         <% } else { %>
-            <a href="<%- pageLink+(typeof isParam !== 'undefined'? '&': '?')+'page=1&limit='+data.limit %>"><i class="fa fa-caret-left"></i></a>
+            <a href="<%- pageLink+'page=1&limit='+data.limit %>"><i class="fa fa-caret-left"></i></a>
         <% } %>
         
         <% var i = (Number(data.page) > 3 ? Number(data.page) - 2 : 1) %>
@@ -35,7 +35,7 @@
             <% if (data.page === i) { %>
                 <a class="active"> <%- i %> </a> 
             <% } else { %>
-                <a href="<%- pageLink+(typeof isParam !== 'undefined'? '&': '?')+'page='+i+'&limit='+data.limit %>"> <%- i %> </a> 
+                <a href="<%- pageLink+'page='+i+'&limit='+data.limit %>"> <%- i %> </a> 
             <% } %>
             
             <% if (i == Number(data.page) + 2 && i < data.total_page) { %>
@@ -46,7 +46,7 @@
         <% if (data.page === data.total_page) { %>
             <a><i class="fa fa-caret-right"></i></a>
         <% } else { %>
-            <a href="<%- pageLink+(typeof isParam !== 'undefined'? '&': '?')+'page='+data.total_page+'&limit='+data.limit %>"><i class="fa fa-caret-right"></i></a>
+            <a href="<%- pageLink+'page='+data.total_page+'&limit='+data.limit %>"><i class="fa fa-caret-right"></i></a>
         <% } %>
             
     </div>
