--- a/src/views/admin/layouts/sidebar.ejs
+++ b/src/views/admin/layouts/sidebar.ejs
@@ -6,26 +6,29 @@
     </ul>
     
     <ul class="sidebar-panel nav">
-      <li><a href="#"><span class="icon color15"><i class="fa fa-user"></i></span>Quản lý user<span class="caret"></span></a>
+      <li><a ><span class="icon color15"><i class="fa fa-user"></i></span>Quản lý user<span class="caret"></span></a>
         <ul>
           <li><a href="/admin/user">Người dùng</a></li>
-          <li><a href="#">Admin</a></li>
+          <li><a href="/admin/administrators">Quản trị viên</a></li>
         </ul>
       </li>
       <li><a href="/admin/review"><span class="icon color15"><i class="fa fa-pencil-square-o"></i></span>Quản lý bài review</a></li>
       <li><a href="/admin/blog"><span class="icon color15"><i class="fa fa-edit"></i></span>Quản lý bài blog</a></li>
-      <li><a href="#"><span class="icon color15"><i class="fa fa-list-ul"></i></span>Quản lý thể loại <span class="caret"></span></a>
+      <li><a ><span class="icon color15"><i class="fa fa-tags"></i></span>Quản lý thể loại <span class="caret"></span></a>
         <ul>
-          <li><a href="/admin/book-category">Quản lý thể loại sách</a></li>
-          <li><a href="/admin/banner-category">Quản lý thể loại banner</a></li>
+          <li><a href="/admin/review-category">Bài Review</a></li>
+          <li><a href="/admin/blog-tag">Bài Blog</a></li>
+          <!-- <li><a href="/admin/banner-category">Banner</a></li> -->
         </ul>
       </li>
-      <li><a href="/admin/banner"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý banner</a></li>
-      <li><a href="/admin/blog-tags"><span class="icon color15"><i class="fa fa-tags"></i></span>Quản lý blog tag</a></li>
-      <li><a href="/admin/history"><span class="icon color15"><i class="fa fa-history"></i></span>Quản lý lịch sử</a></li>
+      <!-- <li><a href="/admin/banner"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý banner</a></li>
+      <li><a href="/admin/history"><span class="icon color15"><i class="fa fa-history"></i></span>Quản lý lịch sử</a></li> -->
       <!-- <li><a href="customizable.html"><span class="icon color10"><i class="fa fa-lightbulb-o"></i></span>Customizable</a></li>
       <li><a href="helper-classes.html"><span class="icon color8"><i class="fa fa-code"></i></span>Helper Classes</a></li> -->
     </ul>
+    <div class="sidebar-plan">
+      <a href="/admin/logout" class="btn btn-light" style="width: 100%;">Đăng xuất</a>
+    </div>
     
     
     </div>
