--- a/src/views/admin/review-category.ejs
+++ b/src/views/admin/review-category.ejs
@@ -28,23 +28,21 @@
 
 	<!-- START CONTENT -->
 	<div class="content">
-
 		<!-- Start Page Header -->
 		<div class="page-header">
-			<h1 class="title">Danh sách thể loại bài blog</h1>
+			<h1 class="title">Danh sách thể loại bài review</h1>
 
 			<!-- Start Page Header Right Div -->
 			<div class="right">
 				<div class="btn-group" role="group" aria-label="...">
-					<a href="/admin/blog-tag/create" class="btn btn-light">Tạo mới</a>
-					<a href="/admin/blog-tag" class="btn btn-light"><i class="fa fa-refresh"></i></a>
+					<a href="/admin/review-category/create" class="btn btn-light">Tạo mới</a>
+					<a href="/admin/review-category" class="btn btn-light"><i class="fa fa-refresh"></i></a>
 					<a href="#" class="btn btn-light"><i class="fa fa-search"></i></a>
 				</div>
 			</div>
 			<!-- End Page Header Right Div -->
 		</div>
 		<!-- End Page Header -->
-
 
 		<!-- START CONTAINER -->
 		<div class="container-flush">
@@ -64,13 +62,20 @@
 							</ul>
 						</div>
 						<div class="panel-body">
-							<form class="form" action="/admin/blog-tag" method="GET">
+							<form class="form" action="/admin/review-category" method="GET">
 								<div class="row">
-									<div class="col-md-12 col-lg-12">
+									<div class="col-md-12 col-lg-6">
 										<div class="form-group">
 											<label for="input1" class="form-label">Tên thể loại</label>
 											<input type="text" class="form-control" id="cate_name" name="cate_name"
-												placeholder="Nhập tên thể loại">
+											placeholder="Nhập tên thể loại" value="<%- params.cate_name %>">
+										</div>
+									</div>
+									<div class="col-md-12 col-lg-6">
+										<div class="form-group">
+											<label for="input1" class="form-label">Tên ngắn</label>
+											<input type="text" class="form-control" id="short_name" name="short_name"
+											placeholder="Nhập tên ngắn" value="<%- params.short_name %>">
 										</div>
 									</div>
 								</div>
@@ -78,7 +83,7 @@
 									<div class="col-md-12 col-lg-6">
 										<div class="form-group">
 											<label class="form-label">Thể loại</label>
-											<select class="form-control selectpicker" name="tag_color">
+											<select class="form-control selectpicker" name="tag_color" >
 												<option value="none" disabled selected hidden>Chọn màu</option>
 												<option value="blue">Blue</option>
 												<option value="red">Red</option>
@@ -93,7 +98,7 @@
 									<div class="col-md-12 col-lg-6">
 										<div class="form-group">
 											<label for="input1" class="form-label">Trạng thái</label>
-											<select class="selectpicker form-control" name="block">
+											<select class="selectpicker form-control" name="hide">
 												<option data-content="Chọn trạng thái"></option>
 												<option data-content="<span class='label label-success'>Active</span>">false</option>
 												<option data-content="<span class='label label-danger'>InActive</span>">true</option>
@@ -102,7 +107,7 @@
 									</div>
 								</div>
 								<div class="button-container">
-									<a href="/admin/blog-tag" class="btn">Hủy</a>
+									<a href="/admin/review-category" class="btn">Hủy</a>
 									<button type="submit" class="btn btn-default">Tìm kiếm</button>
 								</div>
 							</form>
@@ -126,6 +131,7 @@
 									<thead>
 										<tr>
 											<td>Tên thể loại</td>
+											<td>Tên ngắn</td>
 											<td>Màu thể loại</td>
 											<td>Trạng thái</td>
 											<td>Chức năng</td>
@@ -136,15 +142,16 @@
 										<% allCatePage.data.forEach(cate =>{  %>
 										<tr>
 											<td><%- cate.name %></td>
+											<td><%- cate.short_name %></td>
 											<td>
 												<span class="label <%- cate.tag_color %>"><%- cate.tag_color %></span>
 											</td>
 											<td>
-												<%- cate.block ? "<span class='label label-danger'>InActive</span>" : "<span class='label label-success'>Active</span>" %>
+												<%- cate.hide ? "<span class='label label-danger'>InActive</span>" : "<span class='label label-success'>Active</span>" %>
 											</td>
 											<td>
-												<a href="/admin/blog-tag/create?id=<%- cate._id %>" class="edit-icon margin-r-5" ><i class="fa fa-edit"></i></a>
-												<a onclick="confirmBeforeBlock('<%- cate._id %>', '<%- cate.block %>')" class="block-icon" ><i class="fa fa-ban margin-r-5"></i></a>
+												<a href="/admin/review-category/create?id=<%- cate._id %>" class="edit-icon margin-r-5" ><i class="fa fa-edit"></i></a>
+												<a onclick="confirmBeforeBlock('<%- cate._id %>', '<%- cate.hide %>')" class="block-icon" ><i class="fa fa-ban margin-r-5"></i></a>
 											</td>
 										</tr>
 										<% }) %>
@@ -156,16 +163,18 @@
 						<%- include('layouts/pagination.ejs', {
 							limitTitle: 'Thể loại',
 							data: allCatePage,
-							pageLink: '/admin/blog-tag'+link,
+							pageLink: '/admin/review-category'+link,
 							title: 'Chọn số lượng hiển thị mỗi trang'
 						}) %>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- END CONTAINER -->
+	</div>
+	<!-- END CONTAINER -->
 	</div>
 	<!-- End Content -->
+
 
 
 
@@ -180,7 +189,7 @@
 				cancelText: "Hủy"
 			}).then(async e => {
 				if (e) {
-					fetch('/admin/blog-tag/blockCate', {
+					fetch('/admin/review-category/hideCate', {
 						method: 'PUT',
 						headers: {
 							'Content-Type': 'application/json',
@@ -218,6 +227,7 @@
 
 		
 	</script>
+
 </body>
 
 </html>
