--- a/src/views/user-cms/layouts/header.ejs
+++ b/src/views/user-cms/layouts/header.ejs
@@ -2,7 +2,7 @@
 
     <!-- Start App Logo -->
     <div class="applogo">
-      <a href="index.html" class="logo">Book</a>
+      <a href="/" class="logo">Book</a>
     </div>
     <!-- End App Logo -->
 
