--- a/src/views/user-cms/layouts/sidebar.ejs
+++ b/src/views/user-cms/layouts/sidebar.ejs
@@ -25,7 +25,7 @@
     </ul>
     
     <div class="sidebar-plan">
-      <a href="#" class="btn btn-light" style="width: 100%;">Đăng xuất</a>
+      <a href="/user-cms/dashboard/logout" class="btn btn-light" style="width: 100%;">Đăng xuất</a>
     </div>
     
 </div>
