--- a/src/views/admin/blog.ejs
+++ b/src/views/admin/blog.ejs
@@ -1,153 +1,327 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="">
-    <meta name="description" content="">
-    <meta name="keywords" content="" />
-  
-  
-    <!-- ========== Css Files ========== --> 
-    <%- include('layouts/head') %>
 
-  </head>
-  <body>
-  <!-- Start Page Loading -->
-  <%- include('layouts/loading') %>
-  <!-- End Page Loading -->
-  <!-- START HEADER -->
-  <%- include('layouts/header') %>
-  <!-- END HEADER -->
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="">
+	<meta name="description" content="">
+	<meta name="keywords" content="" />
 
 
-<!-- START SIDEBAR -->
-<%- include('layouts/sidebar') %>
-<!-- END SIDEBAR -->
+	<!-- ========== Css Files ========== -->
+	<%- include('layouts/head') %>
 
-<!-- START CONTENT -->
-<div class="content">
+</head>
 
-<!-- START CONTAINER -->
-<div class="container-padding">
-  <!-- Start Row -->
-  <div class="row">
-    <!-- Start Panel -->
-    
-    <div class="col-md-12">
-      <div class="panel panel-default">
-    
-        <div class="panel-title">
-          Quản lý bài blog
-        </div>
-
-        <button type="button" class="btn btn-option1 btn-search">Tìm kiếm</button>
-        <button class="btn btn-light btn-refresh-blog"><i class="fa fa-refresh"></i></button>
-    
-      </div>
-      <div class="panel panel-default" id="panel-search" >
-        <div class="panel-body">
-          <form class="form" action="/admin/blog" method="GET">
-            <div class="panel-title">
-              Tìm kiếm bài blog
-            </div>
-            <div class="flex-search">
-              <div class="form-group flex-left-search">
-                <input type="text" class="form-control" id="title" name="title" placeholder="Nhập tên bài blog">
-              </div>
-              <div class="form-group flex-right-search" >
-                <input type="text" class="form-control" id="username" name="username" placeholder="Nhập tên blogger">
-              </div>
-            </div>
-            <div class="flex-search">
-              <div class="form-group flex-right-search">
-                <select class="selectpicker form-control" name="hide">
-                  <option data-content="Chọn status"></option>
-                  <option data-content="<span class='label label-success'>Active</span>">false</option>
-                  <option data-content="<span class='label label-danger'>InActive</span>">true</option>
-                </select>   
-              </div>
-            </div>
-              <div class="form-group ">
-                <button type="button" class="btn btn-close-search">Đóng</button>
-                <button type="submit" class="btn btn-default">Tìm kiếm</button>              
-              </div>
-          </form>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        
-        <div class="panel-body">
-          
-          <div class="table-responsive">
-            <p>Số lượng bài blog: <%- totalBlog %></p>
-            <table class="table table-bordered table-striped">
-              <thead>
-                <tr>
-                  <td>Title</td>
-                  <td>Blogger</td>
-                  <td>Status</td>
-                </tr>
-              </thead>
-              <tbody>    
-
-                <% allBlogPage.data.forEach(blog =>{  %>
-                  <tr>
-                    <td><%- blog.title %></td>
-                    <td><%- blog.blogger.profile.username %></td>
-                    <td >
-                      <button href="" data-id="<%- blog._id %>" data-toggle="modal" data-target="#inActive-blog-modal" class=" btn-change-status <%- blog.hide ? 'btn btn-danger' : 'btn btn-success' %>">
-                        <%- blog.hide ? 'InActive' : 'Active' %>
-                      </button> 
-                    </td>
-                  </tr> 
-                <% }) %>
-              </tbody>
-            </table>
-          </div> 
-        </div>
-        
-  <%- include('layouts/pagination.ejs', {
-        limitTitle: 'Bài blog',
-        data: allBlogPage,
-        pageLink: '/admin/blog',
-        title: 'Chọn số lượng hiển thị mỗi trang'
-    }) %> 
-      </div>
-      <div class="modal fade" id="inActive-blog-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel"><%- allBlogPage.data.hide ? 'Active Blog' : 'InActive Blog' %></h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-              <div class="modal-body" >
-                  Bạn có chắc chắn muốn <%- allBlogPage.data.hide ? 'Active Blog' : 'InActive Blog' %> bài blog này?
-              </div>
-              <div class="modal-footer">
-                    <button id="btn-inActive-blog" data-id="???" type="button" class="btn btn-success">Chấp nhận</button>
-                  <button type="button" class="btn btn-danger" data-dismiss="modal">Hủy bỏ</button>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-    <!-- End Panel -->
-  </div>
-  <!-- End Row -->
-</div>
-<!-- END CONTAINER -->
-</div>
-<!-- End Content -->
+<body>
+	<!-- Start Page Loading -->
+	<%- include('layouts/loading') %>
+	<!-- End Page Loading -->
+	<!-- START HEADER -->
+	<%- include('layouts/header') %>
+	<!-- END HEADER -->
 
 
+	<!-- START SIDEBAR -->
+	<%- include('layouts/sidebar') %>
+	<!-- END SIDEBAR -->
+
+	<!-- START CONTENT -->
+	<div class="content">
+		<!-- Start Page Header -->
+		<div class="page-header">
+			<h1 class="title">Danh sách bài blog</h1>
+
+			<!-- Start Page Header Right Div -->
+			<div class="right">
+				<div class="btn-group" role="group" aria-label="...">
+					<!-- <a href="/user-cms/book-blog/create" class="btn btn-light">Tạo bài mới</a> -->
+					<a href="/admin/blog" class="btn btn-light"><i class="fa fa-refresh"></i></a>
+					<a  class="btn btn-light"><i class="fa fa-search"></i></a>
+				</div>
+			</div>
+			<!-- End Page Header Right Div -->
+
+		</div>
+		<!-- End Page Header -->
+
+
+		<!-- START CONTAINER -->
+		<div class="container-flush">
+			<!-- Start Row -->
+			<div class="row">
+				<!-- Start Panel -->
+
+				<div class="col-md-12 col-lg-12">
+					<div class="panel panel-default">
+
+						<div class="panel-title">
+							Tìm kiếm
+							<ul class="panel-tools">
+								<li><a class="icon minimise-tool"><i class="fa fa-minus"></i></a></li>
+								<li><a class="icon expand-tool"><i class="fa fa-expand"></i></a></li>
+								<li><a class="icon closed-tool"><i class="fa fa-times"></i></a></li>
+							</ul>
+						</div>
+						<div class="panel-body">
+							<form class="form" action="/admin/blog" method="GET">
+								<div class="row">
+									<div class="col-md-12 col-lg-6">
+										<div class="form-group">
+											<label for="input1" class="form-label">Tên blog</label>
+											<input type="text" class="form-control" id="blog_name" name="blog_name"
+											placeholder="Nhập tên blog" value="<%- params.blog_name %>">
+										</div>
+									</div>
+									<div class="col-md-12 col-lg-6">
+                                        <div class="form-group">
+                                            <label class="form-label">Tag</label>
+                                            <select class="form-control selectpicker" name="tag" multiple data-live-search="true">
+                                                <% blogTags.forEach(tag => { %>
+                                                    <option value="<%- tag._id %>" <%- params.tag && params.tag.includes(tag._id.toString()) && 'selected' %> ><%- tag.name %></option>
+                                                <% }) %>                                                    
+                                            </select>
+                                        </div>
+                                    </div>
+
+								</div>
+								<div class="row">
+				
+									<div class="col-md-12 col-lg-6">
+										<div class="form-group">
+											<label for="input1" class="form-label">Trạng thái</label>
+											<select class="selectpicker form-control" name="isConfirm">
+												<option data-content="Chọn trạng thái"></option>
+												<option data-content="<span class='label label-success'>Đã duyệt</span>">true</option>
+												<option data-content="<span class='label label-warning'>Chờ duyệt</span>">false</option>
+											</select>  
+										</div>
+									</div>
+									<div class="col-md-12 col-lg-6">
+										<div class="form-group">
+											<label for="input1" class="form-label">Trạng thái</label>
+											<select class="selectpicker form-control" name="hide">
+												<option data-content="Chọn trạng thái"></option>
+												<option data-content="<span class='label label-success'>Active</span>">false</option>
+												<option data-content="<span class='label label-danger'>InActive</span>">true</option>
+											</select>  
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12 col-lg-6">
+										<fieldset>
+											<div class="control-group">
+												<label for="input1" class="form-label">Từ ngày</label>
+												<div class="controls">
+													<div class="input-prepend input-group">
+														<span class="add-on input-group-addon"><i class="fa fa-calendar"></i></span>
+														<input type="text" id="date-picker" name="date_from" class="form-control" placeholder="dd/mm/yyyy" value="<%- params.date_from %>"/> 
+													</div>
+												</div>
+											</div>
+										</fieldset>
+									</div>
+									
+									<div class="col-md-12 col-lg-6">
+										<fieldset>
+											<div class="control-group">
+												<label for="input1" class="form-label">Đến</label>
+												<div class="controls">
+													<div class="input-prepend input-group">
+														<span class="add-on input-group-addon"><i class="fa fa-calendar"></i></span>
+														<input type="text" id="date-picker-2" name="date_to" class="form-control" placeholder="dd/mm/yyyy" value="<%- params.date_to %>"/> 
+													</div>
+												</div>
+											</div>
+										</fieldset>
+									</div>
+								</div>
+
+								<div class="button-container margin-t-20">
+									<a href="/admin/blog" class="btn">Hủy</a>
+									<button type="submit" class="btn btn-default">Tìm kiếm</button>
+								</div>
+							</form>
+						</div>
+					</div>	
+				</div>
+				<!-- End Panel -->
+			</div>
+			<!-- End Row -->
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-title">
+                            Danh sách <span class="label label-default"><%- totalBlog %></span>
+                        </div>
+						<div class="panel-body">
+	
+							<div class="table-responsive">
+								<table class="table table-bordered table-striped">
+									<thead>
+										<tr>
+											<td>Tên blog</td>
+											<td>Người viết</td>
+											<td>Tag</td>
+											<td>Ngày đăng</td>
+											<td>Trạng thái</td>
+											<td>Chức năng</td>
+										</tr>
+									</thead>
+									<tbody>
+
+										<% allBlogPage.data.forEach(blog =>{  %>
+										<tr>
+											<td><%- blog.title %></td>
+											<td><%- blog.blogger.profile.full_name %></td>
+											<td style="width: 150px">
+												<% blog.tag.forEach(tg => { %>
+													<span class="label <%- tg.tag_color %>"><%- tg.name %></span>
+												<% }) %>
+											</td>
+											<td class="datetime <%- blog._id %>"><%- blog.createdAt %></td>
+											<td >
+												<span class="label <%- blog.isConfirm? 'label-success': 'label-warning' %>"><%- blog.isConfirm? 'Đã duyệt': 'Chờ duyệt' %></span>
+				  
+												<%- blog.hide ? "<span class='label label-danger'>InActive</span>" : "<span class='label label-success'>Active</span>" %>
+											</td>	
+											<td>
+												<a href="/admin/blog/<%- blog._id %>" class="detail-icon">                      
+													<i class="fa fa-eye margin-r-5"></i>    
+												</a>
+												<a onclick="confirmBeforeConfirm('<%- blog._id %>', '<%- blog.isConfirm %>')" class="confirm-icon" ><i class="fa fa-check-circle margin-r-5"></i></a>
+						 						<a onclick="confirmBeforeBlock('<%- blog._id %>', '<%- blog.hide %>')" class="block-icon" ><i class="fa fa-ban margin-r-5"></i></a>
+											</td>
+										</tr>
+										<% }) %>
+									</tbody>
+								</table>
+							</div>
+						</div>
+	
+						<%- include('layouts/pagination.ejs', {
+							limitTitle: 'Bài blog',
+							data: allBlogPage,
+							pageLink: '/admin/blog',
+							title: 'Chọn số lượng hiển thị mỗi trang'
+						}) %>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- END CONTAINER -->
+	</div>
+	<!-- End Content -->
 
 
 
-<%- include('layouts/javascript') %>
 
+
+	<%- include('layouts/javascript') %>
+	<script>
+		$(document).ready(function() {
+			moment.locale('vi');
+		
+			let blogs = '<%- allBlogPage.data.map(item => item._id) %>';
+	
+			blogs.split(',').forEach(blog => {
+				let time = $('.datetime.'+blog).html();
+				$('.datetime.'+blog).text(moment(new Date(time)).format('lll'));       
+			})
+		})
+
+		async function confirmBeforeConfirm(id,status) {
+		cuteAlert({
+			type: "question",
+			title: status === 'true'?"Bỏ duyệt":"Duyệt",
+			message: status === 'true'?"Bạn có muốn bỏ duyệt bài viết này?": "Bạn có muốn duyệt bài viết này không?",
+			confirmText: "Đồng ý",
+			cancelText: "Hủy"
+		}).then(async e => {
+			if (e) {
+				fetch('/admin/blog/confirmBlog', {
+					method: 'PUT',
+					headers: {
+						'Content-Type': 'application/json',
+						// 'Accept': 'application/json',
+					},
+					body: JSON.stringify({ id })
+				})
+				.then(response => response.json())
+				.then(data => {
+					if(!data.error) {
+						cuteToast({
+							type: "success", // or 'info', 'error', 'warning'
+							message: data.message,
+							timer: 5000
+							});
+							document.location.reload(true);
+					} else {
+						cuteToast({
+							type: "error", // or 'info', 'error', 'warning'
+							message: data.message,
+							timer: 5000
+						});
+					}
+				})
+				.catch(err => {
+					cuteToast({
+						type: "error", // or 'info', 'error', 'warning'
+						message: data.message,
+						timer: 5000
+					});
+				});
+			}
+		})
+	}
+
+	async function confirmBeforeBlock(id,status) {
+		cuteAlert({
+			type: "question",
+			title: status === 'true'?"Bỏ ẩn":"Ẩn",
+			message: status === 'true'?"Bạn có muốn bỏ ẩn bài viết này?": "Bạn có muốn ẩn bài viết này không?",
+			confirmText: "Đồng ý",
+			cancelText: "Hủy"
+		}).then(async e => {
+			if (e) {
+				fetch('/admin/blog/hideBlog', {
+					method: 'PUT',
+					headers: {
+						'Content-Type': 'application/json',
+						// 'Accept': 'application/json',
+					},
+					body: JSON.stringify({ id })
+				})
+				.then(response => response.json())
+				.then(data => {
+					if(!data.error) {
+						cuteToast({
+							type: "success", // or 'info', 'error', 'warning'
+							message: data.message,
+							timer: 5000
+							});
+							document.location.reload(true);
+					} else {
+						cuteToast({
+							type: "error", // or 'info', 'error', 'warning'
+							message: data.message,
+							timer: 5000
+						});
+					}
+				})
+				.catch(err => {
+					cuteToast({
+						type: "error", // or 'info', 'error', 'warning'
+						message: data.message,
+						timer: 5000
+					});
+				});
+			}
+		})
+	}
+	</script>
 
 </body>
+
 </html>
