--- a/src/views/admin/layouts/header.ejs
+++ b/src/views/admin/layouts/header.ejs
@@ -2,9 +2,9 @@
   <div id="top" class="clearfix">
 
     <!-- Start App Logo -->
-    <!-- <div class="applogo">
-          <a href="index.html" class="logo">kode</a>
-        </div> -->
+    <div class="applogo">
+          <a href="" class="logo">Book</a>
+        </div>
     <!-- End App Logo -->
 
     <!-- Start Sidebar Show Hide Button -->
@@ -21,16 +21,7 @@
 
       <li class="dropdown link">
         <a href="#" data-toggle="dropdown" class="dropdown-toggle profilebox"><img src="<%- admin.profile.image %>"
-            alt="img"><b><%- admin.profile.full_name %></b><span class="caret"></span></a>
-        <ul class="dropdown-menu dropdown-menu-list dropdown-menu-right">
-          <li role="presentation" class="dropdown-header">Profile</li>
-          <!-- <li><a href="#"><i class="fa falist fa-inbox"></i>Inbox<span class="badge label-danger">4</span></a></li> -->
-          <!-- <li><a href="#"><i class="fa falist fa-file-o"></i>Files</a></li> -->
-          <li><a href="#"><i class="fa falist fa-wrench"></i>Settings</a></li>
-          <li class="divider"></li>
-          <li><a href="#"><i class="fa falist fa-lock"></i> Lockscreen</a></li>
-          <li><a href="#"><i class="fa falist fa-power-off"></i> Logout</a></li>
-        </ul>
+            alt="img"><b><%- admin.profile.full_name %></b></a>
       </li>
 
     </ul>
